[gd_scene load_steps=8 format=3 uid="uid://do60jfk40770p"]

[ext_resource type="Script" path="res://Assets/Scripts/Class/NPC/Wolves/Character/Gray/Eurasian_Wolf/Eurasian_Wolf.gd" id="1_5nub2"]
[ext_resource type="PackedScene" uid="uid://c2w5qfg2nial8" path="res://Assets/Scences/UI/Wolf_Almanac/Book/Eurasian Wolf/eurasian_wolf_almanac.tscn" id="2_gggby"]
[ext_resource type="SpriteFrames" uid="uid://hn2ignqr2e3q" path="res://Assets/Animate/Chacter/NPC/Wolves/Gray_-Wolf/gray_wolf.tres" id="3_gna81"]
[ext_resource type="AudioStream" uid="uid://hpt12c271okl" path="res://Assets/Music/SFX/Howl/Wolf Howl 08.wav" id="4_57nic"]
[ext_resource type="AudioStream" uid="uid://t867kq16bfh7" path="res://Assets/Music/SFX/Get_Wolf/Get_Wolf.wav" id="5_tgh6c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wi3iq"]
radius = 61.2

[sub_resource type="CircleShape2D" id="CircleShape2D_krm1x"]
radius = 108.19

[node name="Eurasian_Wolf" type="CharacterBody2D" node_paths=PackedStringArray("Choirs", "Howling_SFX", "Wolf_Animation") groups=["Wolves"]]
z_index = 1
y_sort_enabled = true
collision_layer = 4096
collision_mask = 9
script = ExtResource("1_5nub2")
Choirs = NodePath("Choirs")
Howling_SFX = NodePath("Howling")
book_alamanac = ExtResource("2_gggby")
Wolf_Name = "Eurasian Wolf"
Wolf_Animation = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_gna81")
animation = &"iddle"
autoplay = "iddle"
offset = Vector2(0, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, -23)
shape = SubResource("CircleShape2D_wi3iq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-5, -22)
collision_layer = 4096
collision_mask = 2050
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_krm1x")
debug_color = Color(0.654902, 0.513726, 0.196078, 0.419608)

[node name="Howling" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_57nic")
bus = &"Sound Effects"
area_mask = 8192

[node name="Choirs" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tgh6c")
area_mask = 8192

[connection signal="body_entered" from="Area2D" to="." method="_on_inside_the_wolf"]
[connection signal="body_exited" from="Area2D" to="." method="_on_outside_the_wolf"]
[connection signal="finished" from="Choirs" to="." method="_on_choirs_finished"]
